--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,6 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "databricks-sdk",
     "inflect",
     "networkx",
     "planck",
@@ -48,10 +47,28 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+
+# IaC
 pulumi = [
     "pulumi",
     "pulumi_databricks>=1.36",  # required to monitor laktory usage
 ]
+
+# DataFrame
+polars = [
+    "polars"
+]
+spark = [
+    "pyarrow",
+    "pyspark",
+]
+
+# Orchestrators
+databricks = [
+    "databricks-sdk",
+]
+
+# Dev
 dev = [
     "black",
     "flit",
@@ -62,21 +79,17 @@ dev = [
 #    "mkdocs-snippets",
     "plotly",
 ]
-spark = [
-    "pandas",
-    "pyarrow",
-    "pyspark",
-]
-polars = [
-    "polars"
-]
+
+# Test
 test = [
+    "pandas",
     "pytest",
     "pytest-cov",
     "pytest-examples",
-#    "tox"
     "yfinance",
 ]
+
+# Cloud
 azure = [
     "azure-identity",
     "azure-storage-blob",
