--- a/tests/data/pl-spark-job.yaml
+++ b/tests/data/pl-spark-job.yaml
@@ -45,7 +45,7 @@ nodes:
       - value: producer
       - value: name
       - value: description
-    - spark_func_name: smart_join
+    - spark_func_name: laktory.smart_join
       spark_func_kwargs:
         'on':
           - symbol
