--- a/tests/data/pl-spark-local.yaml
+++ b/tests/data/pl-spark-local.yaml
@@ -16,27 +16,25 @@ nodes:
     path: ../tmp/pl_slv_sink
   transformer:
     nodes:
-    - column:
+    - with_column:
         name: created_at
         type: timestamp
-      sql_expression: data.created_at
-    - column:
+        sql_expr: data.created_at
+    - with_column:
         name: symbol
-      spark_func_name: coalesce
-      spark_func_args:
-      - value: data.symbol
-    - column:
+        sql_expr: data.symbol
+    - with_column:
         name: close
         type: double
-      sql_expression: data.close
-    - spark_func_name: drop
-      spark_func_args:
+        sql_expr: data.close
+    - func_name: drop
+      func_args:
       - value: data
       - value: producer
       - value: name
       - value: description
-    - spark_func_name: laktory.smart_join
-      spark_func_kwargs:
+    - func_name: laktory.smart_join
+      func_kwargs:
         'on':
           - symbol
         other:
@@ -54,21 +52,13 @@ nodes:
     path: /tests/tmp/pl_gld_sink
   transformer:
     nodes:
-    - spark_func_name: laktory.groupby_and_agg
-      spark_func_kwargs:
+    - func_name: laktory.groupby_and_agg
+      func_kwargs:
         agg_expressions:
-        - column:
-            name: max_price
-            type: double
-          spark_func_name: max
-          spark_func_args:
-          - close
-        - column:
-            name: min_price
-            type: double
-          spark_func_name: min
-          spark_func_args:
-          - close
+        - name: max_price
+          expr: F.max('close')
+        - name: min_price
+          expr: F.min('close')
         groupby_columns:
         - symbol
 
