--- a/laktory/cli/quickstart_stack.yaml
+++ b/laktory/cli/quickstart_stack.yaml
@@ -49,23 +49,21 @@ resources:
           table_name: slv_stock_prices
         transformer:
           nodes:
-          - column:
+          - with_column:
               name: created_at
               type: timestamp
-            sql_expression: data.created_at
-          - column:
+              sql_expr: data.created_at
+          - with_column:
               name: symbol
-            spark_func_args:
-            - data.symbol
-            spark_func_name: coalesce
-          - column:
+              sql_expr: data.symbol
+          - with_column:
               name: open
               type: double
-            sql_expression: data.open
-          - column:
+              sql_expr: data.open
+          - with_column:
               name: close
               type: double
-            sql_expression: data.close
+              sql_expr: data.close
 
   providers:
     databricks:
