--- a/tests/data/pl-spark-job.yaml
+++ b/tests/data/pl-spark-job.yaml
@@ -39,10 +39,10 @@ nodes:
         sql_expr: data.close
     - func_name: drop
       func_args:
-      - value: data
-      - value: producer
-      - value: name
-      - value: description
+      - data
+      - producer
+      - name
+      - description
     - func_name: laktory.smart_join
       func_kwargs:
         'on':
