--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -39,7 +39,7 @@ jobs:
         shell: python
 
       - name: Install Laktory
-        run: make install
+        run: make install-with-dbks
 
       - name: make dir
         run: |
