--- a/tests/data/pl-spark-dlt.yaml
+++ b/tests/data/pl-spark-dlt.yaml
@@ -28,23 +28,20 @@ nodes:
     table_name: slv_stock_prices
   transformer:
     nodes:
-    - allow_missing_column_args: false
-      column:
+    - with_column:
         name: created_at
         type: timestamp
-      sql_expression: data.created_at
-    - column:
+        sql_expr: data.created_at
+    - with_column:
         name: symbol
-      spark_func_name: coalesce
-      spark_func_args:
-      - value: data.symbol
-    - column:
+        sql_expr: data.symbol
+    - with_column:
         name: close
         type: double
-      sql_expression: data.close
-    - spark_func_name: drop
-      spark_func_args:
-      - value: data
-      - value: producer
-      - value: name
-      - value: description
+        sql_expr: data.close
+    - func_name: drop
+      func_args:
+      - data
+      - producer
+      - name
+      - description
