--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ pulumi = [
 # DataFrame
 polars = [
     "deltalake",
-    "polars",
+    "polars>=1.0",
     "sqlparse",
 ]
 spark = [
@@ -88,6 +88,7 @@ test = [
     "pytest",
     "pytest-cov",
     "pytest-examples",
+    "ruff<0.5",
     "yfinance",
 ]
 
