--- a/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
@@ -2,3 +2,5 @@ notebook-dlt-laktory-pl:
   source: ./notebooks/dlt/dlt_laktory_pl.py
 notebook-job-laktory-pl:
   source: ./notebooks/jobs/job_laktory_pl.py
+notebook-job-hello:
+  source: ./notebooks/jobs/job_hello.py
