--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-spark-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-spark-dlt.yaml
@@ -1,7 +1,10 @@
 #
 # This is an example of a pipeline that uses Delta Live Tables as the
 # orchestrator and a Spark Chain (serialized spark) for data transformations
-# between and bronze and silver layers.
+# between and bronze and silver layers. It runs in stream mode
+# (as_stream = `True`), meaning that new files are incrementally pushed
+# downstream as new rows instead of re-computing entirely the downstream
+# tables.
 #
 name: pl-stocks-spark-dlt
 
