--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-sql.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-sql.yaml
@@ -12,13 +12,13 @@ orchestrator: DATABRICKS_JOB
 # Configure Orchestrator
 databricks_job:
   name: job-pl-stock-sql
-#  clusters:
-#    - name: node-cluster
-#      autoscale:
-#        min_workers: 1
-#        max_workers: 2
-#      spark_version: 15.2.x-scala2.12
-#      node_type_id: Standard_DS3_v2  # TODO: Change to your desired cloud-specific node type
+  clusters:
+    - name: node-cluster
+      autoscale:
+        min_workers: 1
+        max_workers: 2
+      spark_version: 15.2.x-scala2.12
+      node_type_id: Standard_DS3_v2  # TODO: Change to your desired cloud-specific node type
 
 # Define nodes (each node is a table or a view)
 nodes:
