--- a/.github/workflows/run_quickstarts.yml
+++ b/.github/workflows/run_quickstarts.yml
@@ -19,9 +19,10 @@ on:
 
 jobs:
   laktory-quickstart-workflows:
-    uses: ./github/workflows/run_quickstart.yaml
+    uses: ./github/workflows/run_quickstart.yml
     with:
-      cwd:  ./.run_quickstart_workflows
+      cwd:  ./run_quickstart_workflows
       template: workflows
       databricks_host: ${{ vars.DATABRICKS_HOST }}
       databricks_token: ${{ secrets.DATABRICKS_TOKEN }}
+    secrets: inherit
