--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -4,9 +4,11 @@ on:
   workflow_call:
     inputs:
       cwd:
+        type: string
         description: 'Working Directory'
         required: true
       template:
+        type: string
         description: 'Quickstart Template'
         required: true
 env:
