--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -11,6 +11,14 @@ on:
         type: string
         description: 'Quickstart Template'
         required: true
+      run_workflows:
+        type: boolean
+        description: 'Run workflows or not'
+        required: true
+      destroy:
+        type: boolean
+        description: 'Destroy stack after deployment'
+        default: true
 env:
   DATABRICKS_HOST: ${{ vars.DATABRICKS_HOST }}
   DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
@@ -61,17 +69,21 @@ jobs:
         working-directory: ${{ env.CWD }}
 
       - name: laktory run hello
-        run: laktory run -e dev -job job-hello
+        if: ${{ inputs.run_workflows }}
+        run: laktory run -e dev --job job-hello
         working-directory: ${{ env.CWD }}
 
       - name: laktory run job
-        run: laktory run -e dev -job job-pl-stock-sql
+        if: ${{ inputs.run_workflows }}
+        run: laktory run -e dev --job job-pl-stock-sql
         working-directory: ${{ env.CWD }}
 
       - name: laktory run dlt
-        run: laktory run -e dev -dlt pl-stocks-spark-dlt
+        if: ${{ inputs.run_workflows }}
+        run: laktory run -e dev --dlt pl-stocks-spark-dlt
         working-directory: ${{ env.CWD }}
 
       - name: laktory destroy
+        if: ${{ inputs.destroy }}
         run: laktory destroy -e dev
         working-directory: ${{ env.CWD }}
