--- a/.github/workflows/run_quickstarts.yml
+++ b/.github/workflows/run_quickstarts.yml
@@ -18,9 +18,18 @@ on:
         required: true
 
 jobs:
+  laktory-quickstart-unity-catalog:
+    uses: ./.github/workflows/run_quickstart.yml
+    with:
+      cwd:  ./run_quickstart_unity_catalog
+      template: unity-catalog
+      run_workflows: false
+    secrets: inherit
+
   laktory-quickstart-workflows:
     uses: ./.github/workflows/run_quickstart.yml
     with:
       cwd:  ./run_quickstart_workflows
       template: workflows
+      run_workflows: true
     secrets: inherit
