--- a/.github/workflows/run_quickstarts.yml
+++ b/.github/workflows/run_quickstarts.yml
@@ -39,5 +39,5 @@ jobs:
     with:
       cwd:  ./run_quickstart_workflows
       template: workflows
-      run_workflows: true
+      run_workflows: false
     secrets: inherit
