--- a/.github/workflows/run_quickstart.yml
+++ b/.github/workflows/run_quickstart.yml
@@ -22,11 +22,11 @@ on:
 env:
   DATABRICKS_HOST: ${{ vars.DATABRICKS_HOST }}
   DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-#  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-#  AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-#  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-#  DATABRICKS_HOST_DEV: ${{ secrets.DATABRICKS_HOST_DEV }}
-#  DATABRICKS_TOKEN_DEV: ${{ secrets.DATABRICKS_TOKEN_DEV }}
+  AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  DATABRICKS_HOST_DEV: ${{ secrets.DATABRICKS_HOST_DEV }}
+  DATABRICKS_TOKEN_DEV: ${{ secrets.DATABRICKS_TOKEN_DEV }}
   CWD: ${{ inputs.cwd }}
 
 jobs:
@@ -72,7 +72,7 @@ jobs:
         working-directory: ${{ env.CWD }}
 
       - name: laktory deploy
-        run: laktory deploy
+        run: laktory deploy -y
         working-directory: ${{ env.CWD }}
 
       # TODO: Convert to serverless in update_quickstart_stack.py to save
@@ -94,5 +94,5 @@ jobs:
 
       - name: laktory destroy
         if: ${{ inputs.destroy }}
-        run: laktory destroy
+        run: laktory destroy -y
         working-directory: ${{ env.CWD }}
