--- a/.github/workflows/run_quickstarts.yml
+++ b/.github/workflows/run_quickstarts.yml
@@ -1,4 +1,4 @@
-name: run-quickstart
+name: run-quickstarts
 
 on:
 #  pull_request:
@@ -18,11 +18,26 @@ on:
         required: true
 
 jobs:
+  laktory-quickstart-unity-catalog:
+    uses: ./.github/workflows/run_quickstart.yml
+    with:
+      cwd:  ./run_quickstart_unity_catalog
+      template: unity-catalog
+      run_workflows: false
+    secrets: inherit
+
+  laktory-quickstart-workspace:
+    uses: ./.github/workflows/run_quickstart.yml
+    with:
+      cwd:  ./run_quickstart_workspace
+      template: workspace
+      run_workflows: false
+    secrets: inherit
+
   laktory-quickstart-workflows:
     uses: ./.github/workflows/run_quickstart.yml
     with:
       cwd:  ./run_quickstart_workflows
       template: workflows
-      databricks_host: ${{ vars.DATABRICKS_HOST }}
-      databricks_token: ${{ secrets.DATABRICKS_TOKEN }}
+      run_workflows: true
     secrets: inherit
