--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,26 +116,30 @@ plugins:
 nav:
   - Get Started:
     - About: index.md
-    - Demos: demos.md
     - Installation: install.md
     - Quickstart: quickstart.md
+    - Demos: demos.md
     - Partners: partners.md
 
   - Concepts:
-    - Design Principles: concepts/design.md
     - Models:
-      - Intro: concepts/models/models.md
-      - Pipeline: concepts/models/pipeline.md
-      - Data Sources and Sinks: concepts/models/sourcessinks.md
-      - Transformers: concepts/models/transformers.md
-      - Data Event: concepts/models/dataevent.md
-    - DataFrames: concepts/dataframes.md
-    - Stack: concepts/stack.md
-    - Variables: concepts/variables.md
-    - Deployment (IaC): concepts/deployment.md
-    - CLI: concepts/cli.md
-    - Spark Extension: concepts/spark.md
-    - Data Governance: concepts/governance.md
+      - Models: concepts/models.md
+      - Stack: concepts/stack.md
+      - Variables: concepts/variables.md
+#    - Design Principles: concepts/design.md
+    - ETL:
+      - Data Pipeline: concepts/pipeline.md
+      - Data Sources and Sinks: concepts/sourcessinks.md
+      - Data Transformer: concepts/transformer.md
+      - Data Event: concepts/dataevent.md
+      - DataFrames: concepts/dataframes.md
+      - Spark Extension: concepts/spark.md
+    - DataOps:
+      - DataOps: concepts/dataops.md
+      - Infrastructure-as-Code: concepts/iac.md
+      - CLI: concepts/cli.md
+    - Best Practices:
+      - Data Governance: concepts/governance.md
 
   - How-To Guides:
     - Data Catalog: guides/catalog.md
@@ -176,6 +180,7 @@ nav:
           - api/models/resources/databricks/catalog.md
           - api/models/resources/databricks/cluster.md
           - api/models/resources/databricks/column.md
+          - Dashboard: api/models/resources/databricks/dashboard.md
           - DbfsFile: api/models/resources/databricks/dbfsfile.md
           - api/models/resources/databricks/directory.md
           - DLT Pipeline: api/models/resources/databricks/dltpipeline.md
